fix: simplify cargo metadata execution and remove threading